# haskcrud

./: LICENSE  README.md  epic-serv.cabal
app/: Main.hs
src/: Main.hs
src/API/: API.hs
src/Data/: Analysis.hs
src/Data/API/: API.hs
src/Data/CSV/: Parser.hs
src/Database/: Epicdb.hs
src/Network/: API.hs
src/Network/API/: API.hs
test/Data/: AnalysisSpec.hs
test/Data/CSV/: ParserSpec.hs
test/Database/: EpicdbSpec.hs
test/Network/: APISpec.hs
