name:          epic-serv
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          epic-serv
    hs-source-dirs: .
    main-is:        src/Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , persistent-sqlite >= 2.6.0
                  , cassava >= 0.4.5.0
                  , cmdargs >= 0.10.0
                  , time >= 1.6.0.0
                  , vector >= 0.11.0
                  , bytestring >= 0.10.8