name:          epic-serv
version:       0.1.0.0
cabal-version: >= 1.10
build-type:    Simple
license:       BSD3
license-file:  LICENSE

library
    hs-source-dirs: src
    exposed-modules: Data.CSV.Parser
                   , Data.Analysis
                   , Database.Epicdb
    build-depends:  base   >= 4      && < 5
                  , persistent >= 2.6.0
                  , persistent-sqlite >= 2.6.0
                  , persistent-template >= 2.5.2
                  , monad-logger >= 0.3.24
                  , resourcet >= 1.1.9
                  , cassava >= 0.4.5.0
                  , time >= 1.6.0.0
                  , vector >= 0.11.0
                  , bytestring >= 0.10.8
                  , text >= 1.2.2.1
                  , transformers >= 0.4.2.0
                  , stm >= 2.4.4.1
                  , ghc-prim >= 0.5.0.0
                  , aeson >= 1.0.2.1
   default-language:    Haskell2010

executable epic-serv-exe
    hs-source-dirs: app
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:  base
                  , epic-serv
                  , cmdargs >= 0.10.0
   default-language:    Haskell2010

test-suite epic-serv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , epic-serv
                     , hspec
                     , QuickCheck
                     , time >= 1.6.0.0
                     , bytestring >= 0.10.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
